Fix compiler warning about annotations compiling with newer javac (#113)
Signed-off-by: David Kornel <kornys@outlook.com>